@@ -17,6 +17,7 @@ export(heatmapPEI)
 export(hubgeneInCluster)
 export(mat)
 export(nClusters)
+export(netInCluster)
 export(optCluster)
 export(plotPPI)
 export(sota)
@@ -35,6 +36,7 @@ import(fastcluster)
 import(foreach)
 import(ggplot2)
 import(gplots)
+import(igraph)
 import(mclust)
 import(methods)
 import(parallel)
